...
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Start Location"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/routeType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Route Type" />

            <Spinner
                android:id="@+id/surfaceType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Surface" />

            <Spinner
                android:id="@+id/roadType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Road" />

            <Spinner
                android:id="@+id/difficultyType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Difficulty" />

            <Spinner
                android:id="@+id/terrainType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Terrain" />

            <TextView
...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textOff="Add to Favorites"
                android:textOn="Remove from Favorites" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
