...

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/route_features_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:stretchColumns="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                    android:text="@string/route_features_title"
                    android:textSize="@dimen/home_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/type_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_type_label"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/route_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/general_placeholder"
                    android:textSize="@dimen/home_text_size" />

            </TableRow>

            <TableRow
                android:id="@+id/surface_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_surface_label"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/route_surface_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/general_placeholder"
                    android:textSize="@dimen/home_text_size" />
            </TableRow>
...
                    android:layout_gravity="end"
                    android:text="@string/general_placeholder"
                    android:textSize="@dimen/home_text_size" />
            </TableRow>

            <TableRow
                android:id="@+id/difficulty_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_difficulty_label"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/route_difficulty_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/general_placeholder"
                    android:textSize="@dimen/home_text_size" />
            </TableRow>
...
